# meteo

./: CMakeLists.txt
.cache/clangd/index/: adc.c.22E0495E613401C3.idx  adc.h.C9E5F173D6DBF187.idx  bmp280.c.0DA5F13C12314255.idx  bmp280.h.3DF9F9FFB037517F.idx  dht22.c.3C3166C26E60E8E3.idx  dht22.h.4D3AA826189144DB.idx  display.c.7445D3F84CE76EED.idx  display.h.63FAB3BDD1279316.idx  main.c.083C56871F2FF74F.idx  mq135.c.BD7682EF2B40CEB1.idx  mq135.h.294D5110D6503690.idx  relay.c.63491C31425BA0BC.idx  relay.h.139775E64F0594DA.idx  sensor_data.c.3DE233A4F9966A1B.idx  sensor_data.h.39DD2A691C2DEA85.idx  webserver.c.C287954B7EB0CDD5.idx  webserver.h.E714F6EF860C3679.idx
main/: CMakeLists.txt  gzip_assets.py  main.c  my.txt  vps_server.py
main/data/: page.html  page.template.html  script.js  style.css  testpage.html  testscript.js
main/include/: adc.h  bmp280.h  dht22.h  display.h  mq135.h  mqtt_manager.h  pms5003.h  relay.h  sensor_data.h  st7735.h  tunnel.h  webserver.h
main/src/: adc.c  bmp280.c  dht22.c  display.c  mq135.c  mqtt_manager.c  pms5003.c  relay.c  sensor_data.c  st7735.c  tunnel.c  webserver.c
